--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,71 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+
+:root {
+  --headerHeight: 4rem;
+  --footerHeight: 4rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  scrollbar-color: #777 #7777;
+  scrollbar-width: thin;
+}
+
+::-webkit-scrollbar {
+  width: 0.3rem;
+  height: 0.3rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--bs-secondary);
+  border-radius: 0.5rem;
+}
+
+body {
+  font-family: 'Indie Flower', cursive;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 20px;
+  height: 100vh;
+  overflow: hidden;
+}
+
+header {
+  height: var(--headerHeight);
+  border-bottom: 1px solid var(--bs-gray-500);
+  z-index: 10;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  margin-top: var(--headerHeight);
+}
+
+footer {
+  height: var(--footerHeight);
+  border-top: 1px solid var(--bs-gray-500);
+  z-index: 10;
+}
+
+@media (min-width: 576px) and (max-width: 767px) {
+  main {
+    width: 75%;
+  }
+}
+
+@media (min-width: 768px) {
+  main {
+    width: 50%;
+  }
 }
