--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@ $theme-colors: (
     "primary": #FFE3E3,
     "secondary": #F9C846,
     "terziary": #F96E46,
+    "danger": #E3170A,
     "quaternary": #05b6c6,
     "gray": #545863
 );
